--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
+    <!-- <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;"> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
