--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <!-- <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;"> -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
