--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,10 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
     <!-- <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;"> -->
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <link rel="icon" href="./favicon.ico" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="./favicon.ico" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
