--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,8 @@
     />
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> -->
     <!-- <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;"> -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://adstack-env.eba-zqd3wpmp.eu-west-1.elasticbeanstalk.com/">
-    
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://adstack-env.eba-zqd3wpmp.eu-west-1.elasticbeanstalk.com/; img-src 'self'">
+    <!-- content="default-src 'self' https://example.com/js/; style-src 'self'" -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <link rel="icon" href="./favicon.ico" /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
