--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,9 +13,9 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' *.elasticbeanstalk.com">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://adstack-env.eba-zqd3wpmp.eu-west-1.elasticbeanstalk.com/; img-src 'self' http://adstack-env.eba-zqd3wpmp.eu-west-1.elasticbeanstalk.com/favicon.ico;"> -->
     <!-- content="default-src 'self' https://example.com/js/; style-src 'self'" -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <!-- <link rel="icon" href="./favicon.ico" /> -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
